--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="description">
+      <h2>Juego de Memoria para desarrollador@s</h2>
+      <h4>Selecciona 2 cartas para comenzar la partida.</h4>
+      <h5>Reiniciar Partida</h5>
+    </div>
+    <div id="root">
+      
+    </div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
+
+
