--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
     <div id="description">
       <h2>Juego de Memoria para desarrollador@s</h2>
       <h4>Selecciona 2 cartas para comenzar la partida.</h4>
-      <h5>Reiniciar Partida</h5>
+      <button id="start">Reiniciar Partida</button>
+     <!--<h5>Reiniciar Partida</h5>-->
     </div>
     <div id="root">
       
