Refactoriza codigo en componentes

--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="description">
-      <h2>Juego de Memoria para desarrollador@s</h2>
-      <h4>Selecciona 2 cartas para comenzar la partida.</h4>
-      <button id="start">Reiniciar Partida</button>
-     <!--<h5>Reiniciar Partida</h5>-->
-    </div>
-    <div id="root">
+    <!--<section id="mainContent"></section>-->
+      <div id="root">
       
-    </div>
+      </div>
+
+      <div id="content">
+
+      </div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
