--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!--<section id="mainContent"></section>-->
+    <section id="mainContent"></section>
       <div id="root">
       
       </div>
-
-      <div id="content">
-
-      </div>
+  
     <script src="main.js" type="module"></script>
   </body>
 </html>
