boton desencadena funcion shuffle

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
   <body>
     <section id="mainContent"></section>
       <div id="root">
-      
+        <div class ='showCards' >
+          
+        </div>
       </div>
   
     <script src="main.js" type="module"></script>
