valida match y cambia clase para anular evento click

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,9 @@
     <section id="mainContent"></section>
       <div id="root">
         <div class ='showCards' >
-          
         </div>
+        <div class='showResults'>         
+        </div>       
       </div>
   
     <script src="main.js" type="module"></script>
